# factorforge-cds

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  VALIDATION.md  bump_version.py  mkdocs.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  server.py  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  idea.yml  wet_lab_result.yml
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  e2e.yml  failure-inbox.yml  publish.yml  release.yml
api/: health.py  optimize.py  requirements.txt
archive/: README.md
archive/v1-nbent-opticodon/: README.md
archive/v2-rule-engine/: README.md
archive/v3-ml-prototype/: README.md
benchmarks/: PUBLIC_CLAIM_POLICY.md  README.md  benchmark_spec.yaml  config.py  run_benchmark.py  scoring.py
benchmarks/ablation/: ablation_spec.yaml  make_ablation_figures.py  run_ablation.py
benchmarks/baselines/: greedy_cai.py  most_frequent_codon.py  native_reference.py  random_synonymous.py
benchmarks/datasets/: .gitignore  dataset_provenance.md  fetch_dataset.py
benchmarks/scripts/: aggregate_profiles.py  profile_a_diff.py  resume_job130_rerun.sh  run_and_archive_profile.py
benchmarks/test_data/: test_toy_flip.py  toy_profile_A.json  toy_profile_B.json
data/: nbenthamiana_codons.json  nbenthamiana_golden_set.json
data/reference/: active_codon_reference.json  codon_table_manifest.json  codon_table_manifest_nbev11_hc_v2.json  reference_policy_manifest.json
data/templates/: high_expression.json  standard_expression.json
docs/: BENCHMARK_WORKFLOW.md  assembly-friendly.md  benchmark.md  changelog.md  claude-handoff.md  cli.md  dev-inbox.md  developer-inbox-roadmap.md  factorforge-architecture.md  factorforge-mcp-roadmap.md  factorforge-skills-roadmap.md  feedback-inbox.md  getting-started.md  host-profile-registry.md  how-it-works.md  inbox-setup.md  index.md  output.md  profiles.md  release-checklist-template.md  roadmap.md  rule-engine-roadmap.md  scoring-calibration.md  strategy-contract-registry.md  validation-plan.md  validation.md
docs/_research-notes/: 2026-07-05-research-notebook-format.md
docs/agents/: AGENT_PERMISSION_MODEL.md  FAILURE_MODES.md  TOOL_RISK_REGISTRY.md
docs/design/: v3_alpha_product_boundary.md
docs/migration/: v3.1_to_v3.2.md
docs/positioning/: factorforge-scope-boundary.md
docs/reference/: CODON_TABLE_PROVENANCE.md
docs/reports/: v3_ml_training_results.md
docs/strategy/: eijex-tool-layer-classification.md
docs/tutorials/: gfp-nbenthamiana.md
docs/validation/: EVIDENCE_INTAKE_POLICY.md  REGISTRY_SEMVER_POLICY.md  RELEASE_GATE.md  parameter_scan_report.md
docs/validationhub/: intake_schema_v0.1.public.json  prohibited_fields.md
e2e/: web-smoke.spec.js
examples/: sample_protein.fasta
examples/worked_example/: README.md  input_sequence.faa  run_example.py  run_example_v2_smoke.py
notebooks/: factorforge_v1_kaggle.ipynb
recipes/: meta.yaml
reproducibility/benchmark_v0.5.1/: MANIFEST.json  README.md  figure_captions.md
reproducibility/benchmark_v3.2.2/: SHA256SUMS.txt  benchmark_summary_profile_legacy_packaged.frozen.json  benchmark_summary_profile_nbev11_cds_all_derived.frozen.json  benchmark_summary_profile_nbev11_cds_hc_derived.frozen.json  benchmark_summary_profile_qld183_v103_derived.frozen.json  cai_shift_by_profile.tsv  codon_weight_correlation_matrix.tsv  combined_profile_comparison.json  combined_profile_comparison.tsv  multi_constraint_pass_by_profile.tsv  preferred_codon_rank_shift.tsv
schemas/: codon_table_manifest.schema.json  reference_policy_manifest.schema.json
scripts/: audit_public_surface.py  benchmark.py  build_codon_profile.py  check_citation_doi.py  check_constraint_feasibility.py  compare_baselines.py  diagnose_v2_v3_metrics.py  evaluate_model.py  export_schema.py  feature_registry.json  parameter_audit.py  regen_manifest.py  release.py  run_v2_baseline_benchmark.py  serve.py  update_conda_recipe_sha.py  validate_reference_manifests.py
scripts/3_training/: dataset.py  (+4 more)
tests/: conftest.py  test_baselines.py  test_benchmark_cli_output_guard.py  test_benchmark_codon_table_metadata.py  test_benchmark_regression.py  test_benchmark_scoring.py  test_benchmark_smoke.py  test_cai.py  test_codon_table_manifest.py  test_compare_v1_v2.py  test_database.py  test_design_package_schema.py  test_design_package_semantics.py  test_design_package_serialization.py  test_design_review.py  test_docs_consistency.py  test_fasta_io.py  test_gc_content.py  test_host_profile_metadata.py  test_iupac_validation.py  test_legacy_cli.py  test_no_raw_sequence_logging.py  test_openbio_missing_metric_contract.py  test_parameter_registry.py  test_protein_risk.py  test_registry_production_sync.py  test_restriction_sites.py  test_sequence_validator.py  test_translation_integrity.py  test_validation_contract_compat.py  test_validation_registry.py  test_validation_report.py  test_worked_example.py
web/: README.md  index.html
(+276 files in other folders)
