[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factorforge-cds"
version = "3.1.1"
description = "FactorForge — open-source constraint-based CDS design engine by Eijex."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Eijex", email = "eijex.lab@gmail.com" }]
keywords = ["codon optimization", "CDS design", "synthetic biology", "bioinformatics", "Nicotiana benthamiana", "constraint optimization", "dynamic programming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "biopython>=1.81",
    "requests>=2.31",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "transformers>=4.35",
    "fair-esm>=2.0",
    "pyyaml>=6.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://factorforge-cds.vercel.app"
Repository = "https://github.com/eijex/factorforge-cds"
Issues = "https://github.com/eijex/factorforge-cds/issues"

[project.scripts]
factorforge = "factorforge.cli.main:main"
factorforge-validate = "factorforge.validation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
