[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factorforge-cds"
version = "3.1.5"
description = "FactorForge - open-source constraint-based CDS design engine by Eijex."
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Eijex", email = "eijex.lab@gmail.com" }]
keywords = ["codon optimization", "CDS design", "synthetic biology", "bioinformatics", "Nicotiana benthamiana", "constraint optimization", "dynamic programming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "biopython>=1.81",
    "requests>=2.31",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "pyyaml>=6.0",
]
ml = [
    "transformers>=4.40",
    "torch>=2.0",
]

[project.urls]
Homepage = "https://factorforge-cds.vercel.app"
Repository = "https://github.com/eijex/factorforge-cds"
Issues = "https://github.com/eijex/factorforge-cds/issues"

[project.scripts]
factorforge = "factorforge.cli.main:cli"
factorforge-validate = "factorforge.validation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"factorforge" = ["data/*.json", "data/templates/*.json", "schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["archive"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["archive"]
